<resources>
    <string name="app_name">Aplicación - Citas Médicas</string>
    <!-- Strings de la ventana administrador -->
    <string name="title_admi_menu">Bienvenido</string>
    <string name="lbl_btn_gestionar_profiles">Editar Perfil</string>
    <string name="lbl_btn_gestionar_med_espec">Nueva Especialidad</string>
    <string name="lbl_btn_gestionar_citas">Gestionar Citas</string>
    <string name="lbl_btn_logout">Cerrar Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings de la ventana Editar perfil -->
    <string name="title_menu_profiles">Editar Perfil</string>
    <string name="lbl_names">Nombres</string>
    <string name="lbl_lastname">Apellidos</string>
    <string name="lbl_username">Nombre de Usuario</string>
    <string name="lbl_password">Contraseña</string>
    <string name="lbl_btn_save_changes">Guardar Cambios</string>

    <!-- Strings de la ventana Especialidad-->
    <string name="btn_return">Regresar</string>
    <string name="lbl_especialidad">Especialidad</string>
    <string name="title_new_especialidad">Nueva Especialidad</string>
    <string name="lbl_btn_save_especialidad">Guardar</string>

    <!-- Strings del menu de estados-->
    <string name="optn_cancel">Cancelado</string>
    <string name="optn_realize">Realizado</string>
    <string name="optn_pendiente">Realizado</string>
    <string name="optn_notrealize">Realizado</string>

    <!-- Strings del lista de citas-->
    <string name="tv_especialidad">Nombre de la Especialidad</string>
    <string name="tv_paciente">Nombre del Paciente</string>

    <!--String par ala ventan-->
    <string name="nombreempresa">Hospital la Caleta - Chimbote</string>
    <string name="aboutempresa">Centro hospitalario público de Segundo Nivel II-2 que ofrece servicios especializados en salud, administrado por el Gobierno Regional</string>
    <string name="horaatencionempresa">Abierto las 24 horas</string>
    <string name="telefonoempresa">(043) 322281</string>
</resources>